fix: make the restart shell scripts more resilient